main.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Work+Sans&display=swap');

*{
    margin: 0;
    padding: 0;
    box-shadow:border-box;
}
:root{
    --font:'Montserrat',sans-serif;
    --prime-font:'Work Sans',sans-serif;
    --bg:#242121;  
    --main-color:#f9813a;
    --main-font-color:#fdfbfb;
    --sec-font-color: #fcf1f1b4;
}
body{
    background: var(--bg);
    font-family: var(--font);
    color: var(--main-font-color);
    overflow-x: hidden;
}
.center{
    display: flex;
    justify-content: center;
    align-items: center;
}
/* navbar */
.nav{
   width: 100%;
   height: 70px;
   margin: 0 auto;
  justify-content: space-between;
   background: black;
}
.checkBtn{
    display: none;
}
.nav .card{
    margin-left: 30px;
    font-size: 1.5em;
    border-radius: 10px;
    padding:0.1em 0.5em ;
}
a:-webkit-any-link {
    color: white;
    text-decoration: none;
}

.nav .card:hover{
    transition: background .8s;
    background: var(--main-color);
}
.nav ol{
    list-style: none;
}
.nav ol a{
    text-decoration: none;
    color: var(--sec-font-color);
    margin: 0.3em;
    padding: 0.5em 1.5em;
    border-radius: 10px;
}
.nav ol a:hover{
    transition: background .8s;
    background: var(--main-color);
}

/* main section */
.main{
    width: 85%;
    height: 650px;
    margin: 0 auto;
    display: flex;
    align-items: center;
    position: relative;
}
.main::before{
    z-index: -1;
}
 .main::after,.main::before{
    content: '';
    width: 80%;
    height: 70%;
    background: #151618;
    position: absolute;
    bottom: 0;
    right: -10%;
    z-index: -10%;
} 
.main::after{
    background: #15161885;
    height: 70%;
    top: 10px;
    left: -40%;
    border-top: 1px solid grey;
    border-right: 1px solid grey;
    z-index: -11;
}
.box h1{
    font-size: 4.5em; 
    margin-bottom: 0.2em;
  }
  .glow{
    color: white;
    text-align: center;
    animation: glow 1s ease-in-out infinite alternate;
  }
@-webkit-keyframes glow{
    from {
      text-shadow: 0 0 10px #fffb05, 0 0 20px #2d63e0, 0 0 30px #2d63e0, 0 0 40px #2d63e0, 0 0 50px #2d63e0, 0 0 60px #2d63e0, 0 0 70px #2d63e0;
    }
    
    to {
      text-shadow: 0 0 20px #08ff1c, 0 0 30px #08ff1c, 0 0 40px #08ff1c, 0 0 50px #08ff1c, 0 0 60px #08ff1c, 0 0 70px #08ff1c, 0 0 80px #08ff1c;
    }
  } 
.box p{
    font-size: 1.2em;
    color: var(--sec-font-color);
    margin-bottom: 1.2em;
}
.box .btn{
    font-size: 1.2em;
    background: none;
    color: var(--sec-font-color);
    cursor: pointer;
    border: 1px solid var(--main-color);
    border-radius: 10px;
    width: 7em;
    height: 2.2em;
    transition: all .4s;
}
.box .btn:hover{
    background: var(--main-color);
}
.main img{
    width: 25em;
    height: 400px;
    top: 10px;
    position: absolute;
    right:  20px;
    z-index: -1;

}
@media(max-width:1250px){
    .main img{width: 50%;right: 0px;
     margin-right: -70px;
    }

}
@media(max-width:1000px){
    body{font-size: 14px;
        overflow-y: hidden;
    }
    .main img{width: 100%;top: 10px; margin-right: 1em;}
    .main{align-items:flex-end;}
    .checkBtn{
        display: block;
        width: 25px;
        height: 25px;
        cursor: pointer;
        position: relative;
        appearance: none;
        -webkit-appearance: none;
    }
    .nav{
        width: 100%;
        overflow-y: hidden;
    }
    .checkBtn::before{
        content: '☰';
        font-family: 'Font Awesome 5 Free';
        font-weight: 700;
        font-size: 1.9em;
        color: var(--sec-font-color);
    }
    .checkBtn:checked::before{content: '✕';}
    .nav ol{
        position: absolute;
        width: 100%;
        flex-direction: column;
        background: var(--bg);
        top: 80px;
        left: 0;
        z-index: 100;
        padding: 1.2em;
        clip-path: polygon(0 0,100% 0,100% 0,0 0);
        transition: clip-path .4s; 
   }
    .checkBtn:checked ~ol {
        clip-path: polygon(0 0,100% 0,100% 100%,0 100%);
    }
    .nav ol::before{
        content: '';
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 5px;
        background: var(--main-color);
    }
}
@media(max-width:900px){

    .main img{
        width: 70%;
        align-content: center;
    }
    .glow{
        animation: none;
    }
    .box{
        position: absolute;
    }
}
@media (max-width:600px){
    
    .main img{
        width: 100%;
    }
    .glow{
        animation: none;
    }
    .main .box{
        margin-bottom: -5em;
    }
    .checkBtn{
        margin-right: 10px;
    }
}
@media (max-width:400px){
    body{
        overflow-y: hidden;
        font-size: 10px;
    }
    .glow{
        animation: none;
    }
    .checkBtn{
        margin-right: 10px;
    }
    .nav .card{
        margin-left: 10px;
    }
    .main{
        height: 450px;
    }
    .main .box{
        margin-bottom: -15em;
    }

    
} 

